Update nix.yml (try to load image)

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -12,3 +12,4 @@ jobs:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix build
     - run: nix flake check
+    - run: docker load --input ./result
